Add a button to toggle the display of intended behavior in results.

--- a/public/index.html
+++ b/public/index.html
@@ -239,6 +239,7 @@
                                     <button id="button-expand-all" class="btn btn-primary me-md-2" type="button">Expand all</button>
                                     <button id="button-collapse-all" class="btn btn-primary me-md-2" type="button">Collapse all</button>
                                     <button id="button-matching" class="btn btn-primary" type="button">Toggle matching</button>
+                                    <button id="button-intended" class="btn btn-primary" type="button">Toggle intended</button>
                                 </div>
                                 <div id="compare" class="row justify-content-center visually-hidden border">
                                     <div class="col-6" id="results1">
